--- a/2_update website/style2.css
+++ b/2_update website/style2.css
@@ -1,4 +1,4 @@
-body {
+ body {
     background: url("updatebackround1.png");
     position: flex;
     height: 100%;
@@ -51,25 +51,45 @@ section {
     width: 100%;
 }
 /*----KOLMAS KAST----*/
-.up {
-    background-color: dimgrey;
-    height: 50%;
-    margin: 0%;
-}
 .down {
-    background-color: dimgrey;
-    height: 50%;
-    margin: 0%;
+    position: absolute;
+    bottom: 0px;
+}
+.kolmas img{
+    border-radius: 4px;
 }
 .genres {
     word-spacing: 4em;
-    margin-right: 20px;
-    margin-left: 20px;
+    margin: 0px 20px 10px 20px;
     font-size: 20px;
     font: arial;
 }
-@media (max-width: 700px) 
+@media (max-width: 960px) {
     .genres {   
         word-spacing: 1em;
     }
+}
+.download {
+    margin-left: auto;
+    margin-right: auto;
+    padding: 13px 28px;
+    font-size: 50px;
+    background-image: linear-gradient(rgb(102, 213, 92), rgb(40, 185, 27), rgb(40, 185, 27));
+    border-radius: 5px;
+    position: static;
+    border: 0px;
+}
+#Progress_Status {
+    width: 100%;
+    background-image: linear-gradient(rgb(197, 197, 197), grey, grey);
+    margin: 10px;
+    border: 0px;
+    border-radius: 3px;
+}
+#myprogressBar {
+    width: 0%;
+    height: 20px;
+    background-image: linear-gradient(rgb(89, 169, 249) ,DodgerBlue, DodgerBlue);
+    border: 0px;
+    border-radius: 3px;
 }
