--- a/2_update website/style2.css
+++ b/2_update website/style2.css
@@ -1,4 +1,4 @@
- body {
+body {
     background: url("updatebackround1.png");
     position: flex;
     height: 100%;
@@ -9,22 +9,41 @@
     margin: auto;
 }
 #hidden-button {
-    position: absolute;
-    transform: translateY(120%);
-    transition: transform 325ms ease-in;
-    background-color: #000000;
+    position: relative;
+    transform: translateY(-100%);
+    transition: transform 450ms ease-in;
+    background-image: linear-gradient(#636f6d, #323837, #323837, #323837);
     padding: 0.5rem;
-    width: 66%;
     border-radius: 0 0 0.5rem 0.5rem;
+    width: 100%;
     top: 0rem;
-    margin: 0rem;
     display: flex
 }
-.coverart {
+.vasak {
     flex: 30%;
 }
-.cover-text{
-    flex: auto;
+.parem {
+    flex: 70%;
+    margin-left: 10px;
+}
+.cover-picture {
+    width: 100%;
+    border-radius: 5px;
+}
+.cover-text {
+    font-style: normal;
+    font-family: Arial, Helvetica, sans-serif;
+    font: bold;
+    font-size: 20px;
+    font-weight: normal;
+    color: white;
+    text-shadow: 0px 0px 8px #6092a1;
+    text-decoration: none;
+}
+@media (max-width: 700px) {
+    .vasak {
+
+    }
 }
 
 header {
@@ -89,19 +108,17 @@ section {
     }
 }
 .download {
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     padding: 13px 28px;
     font-size: 50px;
     background-image: linear-gradient(rgb(102, 213, 92), rgb(40, 185, 27), rgb(40, 185, 27));
     border-radius: 5px;
-    position: static;
     border: 0px;
 }
 #Progress_Status {
     width: 100%;
     background-image: linear-gradient(rgb(197, 197, 197), grey, grey);
-    margin: 10px;
+    margin: 10px auto;
     border: 0px;
     border-radius: 3px;
 }
@@ -111,4 +128,16 @@ section {
     background-image: linear-gradient(rgb(89, 169, 249) ,DodgerBlue, DodgerBlue);
     border: 0px;
     border-radius: 3px;
+}
+.kast {
+    background-image: linear-gradient(
+        rgba(91, 27, 148, 0.185), hwb(0 0% 0% / 0.11));
+    font-size: x-small;
+    border-radius: 8px;
+    padding: 7px;
+    width: min(40%, 300px);
+    margin: 20px auto 20px 40px;
+}
+.kast p {
+    margin: 0pc;
 }
