--- a/style2.css
+++ b/style2.css
@@ -5,25 +5,24 @@ body {
     background-color: #141411;
     font-family: Arial, Helvetica, sans-serif;
     color: #ffffff;
-    width: min(90%, 1200px);
+    width: min(90%, 1500px);
     margin: auto;
 }
 #hidden-button {
-    position: relative;
-    transform: translateY(-100%);
+    transform: translateY(-150%);
     transition: transform 450ms ease-in;
     background-image: linear-gradient(#636f6d, #323837, #323837, #323837);
     padding: 0.5rem;
     border-radius: 0 0 0.5rem 0.5rem;
     width: 100%;
-    top: 0rem;
-    display: flex
+    top: 0px;
+    display: flex;
 }
 .vasak {
-    flex: 30%;
+    width:  30%;
 }
 .parem {
-    flex: 70%;
+    width: 70%;
     margin-left: 10px;
 }
 .cover-picture {
@@ -40,16 +39,18 @@ body {
     text-shadow: 0px 0px 8px #6092a1;
     text-decoration: none;
 }
+/* 
 @media (max-width: 700px) {
-    .vasak {
+        .vasak {
     }
 }
+*/
 
 header {
     font-family: 'serpentineboldoblique', arial, sans-serif;
     font-size: 80px;
     color: #ffffff;
-    margin: 20px 0px;
+    margin: 100px 0px 20px 0px;
     text-align: center;
 }
 #line1 {
@@ -65,9 +66,7 @@ header {
     border-top: 10px solid DeepSkyBlue;
     width: 60%;
     margin: 4px;
-} 
-
-
+}
 section {
     font-family: Arial;
     font-weight: bold;
@@ -86,14 +85,11 @@ section {
 }
 .image {
     width: 100%;
+    border-radius: 4px;
 }
 /*----KOLMAS KAST----*/
-.down {
-    position: absolute;
+#down {
     bottom: 0px;
-}
-.kolmas img{
-    border-radius: 4px;
 }
 .genres {
     word-spacing: 4em;
