--- a/rulettewheel/rulette.css
+++ b/rulettewheel/rulette.css
@@ -1,23 +1,23 @@
 body {
     background: url("updatebackround1.png");
+    background-color: black;
     position: flex;
-    height: 100%;
+    height: 100vh;
+    width: 100%;
+    /*height: 100vh;*/
     background-color: #141411;
     font-family: Arial, Helvetica, sans-serif;
     color: #ffffff;
     font-weight: bolder;
-    width: min(90%, 1500px);
-    margin: auto;
+    margin: 0rem;
+    display: grid;
+    place-items: center;
+    overflow: hidden;
 }
 
 #options {
     color: blue;
 }
-body {
-    display: grid;
-    place-items: center;
-    height: 100vh;
-    background-color: black;
-    margin: 0rem;
-    overflow: hidden;
+
+#canvas {
 }
