--- a/KV lopuni/lopuni.css
+++ b/KV lopuni/lopuni.css
@@ -26,3 +26,32 @@ body {
     padding: 0rem clamp(1rem, 2vw, 3rem);
     border-radius: clamp(0.4rem, 0.75vw, 1rem);
  */
+
+.progress {
+  width: 400px;
+  max-width: 85vw;
+  height: 4px;
+  position: absolute;
+  bottom: 20vh;
+  left: 50%;
+  border-radius: 4px;
+  background: rgba(white, .5);
+  transform: translate(-50%, -50%);
+  overflow: hidden;
+}
+&:after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 4px;
+  background: white;
+  animation: load 15s linear;
+}
+@keyframes load {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
