--- a/futur/futur.css
+++ b/futur/futur.css
@@ -18,7 +18,7 @@ body {
 .link {}
 
 a {
-  font-size: 9vw;
+  font-size: clamp(8vw, 4vw, 80%);
   color: #fea99d;
   padding: 0rem clamp(1rem, 2vw, 3rem);
   border-radius: clamp(0.4rem, 0.75vw, 1rem);
