--- a/futur/futur.css
+++ b/futur/futur.css
@@ -18,11 +18,19 @@ body {
 .link {}
 
 a {
-  font-size: clamp(8vw, 4vw, 80%);
+  font-size: 60px;
   color: #fea99d;
   padding: 0rem clamp(1rem, 2vw, 3rem);
   border-radius: clamp(0.4rem, 0.75vw, 1rem);
 }
+/* @media (min-width:768px) {
+  #page { 
+      width:600px;
+      margin-left:auto;
+      margin-right:auto;
+      }
+} */
+
 
 a:hover {
   background-color: #1f212e;
