--- a/index.css
+++ b/index.css
@@ -7,7 +7,13 @@ body {
     margin: 0 auto;
     font-family: sans-serif, Tahoma, Verdana, Arial; 
     color:aliceblue;
+    --text: #e1e4ef;
+    --background: ##070708;
+    --primary: #b5bed9;
+    --secondary: #131825;
+    --accent: #5a6eaa;
 }
+
 .kast {
     border-radius: 5px;
     background-color: black;
