--- a/futur/futur.css
+++ b/futur/futur.css
@@ -26,7 +26,7 @@ body {
 }
 
 .link {
-  font-size: clamp(25px, 55px, 80px);
+  font-size: 3rem;
   color: #fea99d;
   padding: 0rem clamp(1rem, 2vw, 3rem);
   border-radius: clamp(0.4rem, 0.75vw, 1rem);
