--- a/rulettewheel/rulette.css
+++ b/rulettewheel/rulette.css
@@ -65,7 +65,7 @@ h1 {
   }
 
 #footer {
-    grid-template-columns: auto auto;
+    grid-template-columns: auto auto auto;
     margin: 0px 200px 200px;
   }
 
